k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: build-web
  labels:
    app: build-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: build-web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: build-web
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: build-web
      containers:
        - name: build-web
          image: zzmmrmn/build-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "250m"
          startupProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 5
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            timeoutSeconds: 10
            periodSeconds: 30
            failureThreshold: 8
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            timeoutSeconds: 10
            periodSeconds: 10
            failureThreshold: 5
