k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: build-web
  labels:
    app: build-web
spec:
  type: ClusterIP
  selector:
    app: build-web
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
