k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: build-web-ingress
  labels:
    app: build-web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - getbuild.ing
      secretName: build-web-tls
  rules:
    - host: getbuild.ing
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: build-web
                port:
                  number: 8080
